Fix footer and text scaling on smaller screen sizes

--- a/css/home.css
+++ b/css/home.css
@@ -72,6 +72,7 @@
 
 .scary-text {
     padding: 50px;
+    width: calc(100% - 100px);
     max-width: 1000px;
     font-size: 30px;
     letter-spacing: 1px;
